@@ -8,6 +8,15 @@
 #import <ruby.h>
 #import <ruby/encoding.h>
 
+#ifdef HAVE_RUBY_THREAD_H
+#import <ruby/thread.h>
+#else
+void *rb_thread_call_with_gvl(void *(*func)(void *), void *data1);
+
+void *rb_thread_call_without_gvl(void *(*func)(void *), void *data1,
+                                 rb_unblock_function_t *ubf, void *data2);
+#endif
+
 void init_rbt_error();
 
 void rbt_check_status(IOReturn status, NSAutoreleasePool *pool);
