@@ -2,6 +2,7 @@
 
 Minor enhancements:
 
+* Bluetooth::scan now releases the GVL.
 * Device#rssi, Device#link_quality now work for OS X 10.7 and newer.
 * Removed use of deprecated methods from the OS X extension.
 
